--- a/index.html
+++ b/index.html
@@ -54,6 +54,8 @@
 		var dirs = [[1,0], [-1,0], [0,1], [0,-1]];
 
 		function generateGrid(wid, hgt) {
+			clear();
+
 			grid=[];
 			gridSize = [wid, hgt];
 			cellSize = [cv.width / wid, cv.height / hgt]
@@ -68,11 +70,15 @@
 			colorGrid()
 		}
 
-		function drawGrid(color = "black", width = 1) {
+		function drawGrid(color = "black", loops = 5, width = 1) {
+			if (loops <= 0) return
+
 			ctx.strokeStyle = color;
 			ctx.lineWidth = width;
 			for (let y = 1; y < gridSize[1]; y++) drawLine([[0, g2C(0,y)[1]], [cv.width, g2C(0,y)[1]]]) //horizontal grid lines
 			for (let x = 1; x < gridSize[0]; x++) drawLine([[g2C(x,0)[0], 0], [g2C(x,0)[0], cv.height]]) //vertical grid lines
+
+			drawGrid(color, loops-1, width) //recursive because canvas can't draw normally for some reason
 		}
 
 		function g2C(x, y, centered = false) {
@@ -90,9 +96,9 @@
 
 			let start = g2C(pos[0], pos[1])
 			ctx.beginPath();
-			ctx.rect(start[0], start[1], cellSize[0], cellSize[1]);
+			ctx.rect(start[0] + 1, start[1] + 1, cellSize[0] - 2, cellSize[1] - 2);
 			ctx.fill();
-			drawGrid();
+			//drawGrid();
 
 
 			if (setData && (grid[pos[1]]||[])[pos[0]] !== undefined) grid[pos[1]][pos[0]] = parseInt(setData);
@@ -106,14 +112,16 @@
 			
 			let drawPos = g2C(pos[0], pos[1])
 			ctx.fillText(text, drawPos[0] + cellSize[0] / 2, drawPos[1] + cellSize[1] / 2 + fontSize / 2 - 5, cellSize[0]);
-			drawGrid();
+			//drawGrid();
 		}
 
 		function colorGrid() {
+			
 			grid.forEach((row, y) => row.forEach((cell, x) => fillSquare([x,y], colorsByCost[grid[y][x]])));
 
 			fillSquare(start, colorsByCost["start"])
 			fillSquare(end, colorsByCost["end"])
+			drawGrid()
 		}
 
 		function drawLine(points, width = 1, color = "black") { //list points
@@ -129,12 +137,14 @@
 		}
 
 		function heatmap(thisStart = start, thisEnd = end, drawPath = true, writeNums = false) {
+			writeNums = document.getElementById("advancedView").checked;
 			let startTime = Date.now()
+
 			let heatmap = [];
 			for (let y = 0; y < gridSize[1]; y++){
 				heatmap.push([])
 				for (let x = 0; x < gridSize[0]; x++) {
-					heatmap[y].push("unset");
+					heatmap[y].push("no");
 				}
 			}
 
@@ -152,7 +162,7 @@
 					target = [activeCell[0] + dir[0], activeCell[1] + dir[1]];
 					if ((heatmap[target[1]]||[])[target[0]] !== undefined && grid[target[1]][target[0]] >= 0) {
 						let newCost = heatmap[activeCell[1]][activeCell[0]] + grid[target[1]][target[0]]
-						if (heatmap[target[1]][target[0]] == "unset" || heatmap[target[1]][target[0]] > newCost) {
+						if (heatmap[target[1]][target[0]] == "no" || heatmap[target[1]][target[0]] > newCost) {
 							heatmap[target[1]][target[0]] = newCost;
 							activeCells.push(target);
 						}
@@ -165,7 +175,7 @@
 			drawGrid();
 
 			//drawLine
-			if (heatmap[thisEnd[1]][thisEnd[0]] == "unset") return false
+			if (heatmap[thisEnd[1]][thisEnd[0]] == "no") {document.getElementById("timeText").textContent = "No valid path :("; return false;}
 			let points = [];
 			let at = thisEnd;
 			let currCost;
@@ -175,7 +185,7 @@
 				let nextMove = undefined;
 				dirs.forEach((dir, i) =>{
 					if ((heatmap[at[1] + dir[1]]||[])[at[0] + dir[0]] !== undefined) {
-						if (heatmap[at[1] + dir[1]][at[0] + dir[0]] < currCost || currCost === undefined && heatmap[at[1] + dir[1]][at[0] + dir[0]] != "unset") {
+						if (heatmap[at[1] + dir[1]][at[0] + dir[0]] < currCost || currCost === undefined && heatmap[at[1] + dir[1]][at[0] + dir[0]] != "no") {
 							currCost = heatmap[at[1] + dir[1]][at[0] + dir[0]];
 							nextMove = [at[0] + dir[0], at[1] + dir[1]];
 						}
@@ -191,7 +201,7 @@
 			drawLine(points, 5, "blue");
 
 			console.log("Time elapsed", Date.now() - startTime);
-			document.getElementById("timeText").textContent = "Time to find path " + (Date.now() - startTime) / 1000 + "s";
+			document.getElementById("timeText").textContent = "Time to find & draw path: " + (Date.now() - startTime) / 1000 + "s";
 		}
 
 		function clear() {
@@ -255,6 +265,12 @@
 			else if (brush == "end") {end = c2G(x,y); colorGrid();}
 			else if (brush == "start") {start = c2G(x,y); colorGrid();}
 		}
+
+		function resizeGrid() {
+			console.log("hehehb")
+			let size = document.getElementById("gridSize").value
+			generateGrid(size, size)
+		}
 		
 		document.addEventListener("DOMContentLoaded", () => { onReady(); });
 		
@@ -269,11 +285,11 @@
 		<div>
 			<h3>Place Tiles:</h3>
 			<input checked="checked" type="radio" id="wall" name="placing" value="-1">
-			<label for="wall">Wall</label><br>
+			<label for="wall">Wall (impassable)</label><br>
 			<input type="radio" id="empty" name="placing" value="1">
 			<label for="empty">Empty</label><br>
 			<input type="radio" id="water" name="placing" value="3">
-			<label for="water">Water</label><br>
+			<label for="water">Slow</label><br>
 			<input type="radio" id="start" name="placing" value="start">
 			<label for="start">Start</label><br>
 			<input type="radio" id="end" name="placing" value="end">
@@ -289,8 +305,16 @@
 				<label for="king"><a target="_blank" href="https://images.chesscomfiles.com/uploads/v1/images_users/tiny_mce/pdrpnht/phpmVRKYr.png">Chess King</a></label><br>
 			</div>
 
+			<h3>Grid Size</h3>
+			<input onChange="resizeGrid()" id="gridSize" type="number" value="20" max="250"><br>
+			<p>Can be hard to see beyond 50</p>
+
+			<h3>Show Advanced</h3>
+			<input type="checkbox" id="advancedView"><br>
+			<p>Shows the calculated "cost" to reach each cell. <br> Very ugly.</p>
+
 			<button onClick="heatmap()">Generate Path</button>
-			<p id="timeText"></p>
+			<h5 id="timeText"></h5>
 		</div>
 	</div>
 
