--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <link rel="stylesheet" href="main.css" />
     <link rel="icon" href="images/lightBulb.png" />
     <script>
-      // window.location.replace('https://portfolio-nuxt-3-iota.vercel.app/');
+      window.location.replace('https://portfolio-nuxt-3-iota.vercel.app/');
     </script>
   </head>
   <body style="overflow: hidden;">
