--- a/xkcd/index.html
+++ b/xkcd/index.html
@@ -78,7 +78,7 @@
       <h2>Here's the GUI</h2>
       <p>Now thats what I call usable! <sup>[No its not]</sup></p>
       <div style="display: flex; justify-content: center;">
-        <img src="images/gui.png" title="I bet you thought I'd write something clever here." style="max-width: 400px;" />
+        <img src="images/gui.PNG" title="I bet you thought I'd write something clever here." style="max-width: 400px;" />
       </div>
     </div>
 
