--- a/xkcd/index.html
+++ b/xkcd/index.html
@@ -52,7 +52,7 @@
       <h5>Note that this site is NOT made by (nor affiliated with) Randall Munroe (yet). If you want to check out his work please go to <a target="_blank" href="https://xkcd.com/">xkcd.com</a>.</h5>
       <p style="margin-top: 25px;">Have you ever been staring at your desktop and said "I wish this was displaying the latest xkcd comic by renown author Randall Munroe"?</p>
       <p>Well I doubt it, but if you're like me and love his work this may be for you anyways.</p>
-      <p>The xkcd background changer does exactly what it says on the tin: it automatically changes your desktop to be the latest, or a random xkcd comic.</p>
+      <p>The xkcd background changer does exactly what it says on the tin: it automatically changes your desktop to be the latest xkcd comic, or a random one if you'd prefer.</p>
     </div>
     <div class="container">
       <h2>Features!</h2>
@@ -87,16 +87,16 @@
 
     <div class="container">
       <h2>Here's the GUI</h2>
-      <p>Now thats what I call usable! <sup>[No its not]</sup></p>
+      <p>Now thats what I call usable!</p>
       <div style="display: flex; justify-content: center;">
-        <img src="images/gui.PNG" title="I bet you thought I'd write something clever here." style="max-width: 400px;" />
+        <img src="images/gui.PNG" title="I admire your optimism." style="max-width: 400px;" />
       </div>
     </div>
 
     <div class="container">
       <h3>The last div</h3>
       <p>Site & tool created by Nathan Harrison (that's me).</p>
-      <p style="margin-bottom: 5px;">In the event this needs to be taken down or changed for legal or security reasons you can reach me here:</p>
+      <p style="margin-bottom: 5px;">In the event it needs to be taken down or changed for legal or security reasons or you just want to tell me how much you love it, you can reach me here:</p>
       <a href="mailto:nathanh.vision@gmail.com">nathanh.vision@gmail.com</a>
       <p>Thanks for stopping by!</p>
     </div>
