--- a/xkcd/index.html
+++ b/xkcd/index.html
@@ -81,7 +81,7 @@
       <div class="container" style="margin: 0; flex-basis: 41%;">
         <h3>Install with Python</h3>
         <p>You can install the xkcd desktop background changer by cloning the repo from my github, its a little more difficult than the exe, but it has the advantage of you not needing to trust me, and you could customize it if you wish.</p>
-        <a href="https://github.com/nateCode1/xckd-bg" target="_blank"><button>Take me to the Repo</button></a>
+        <a href="https://github.com/nateCode1/xkcd-bg" target="_blank"><button>Take me to the Repo</button></a>
       </div>
     </div>
 
