Update to new build

--- a/xkcd/index.html
+++ b/xkcd/index.html
@@ -58,7 +58,7 @@
       <h2>Features!</h2>
       <p>The xkcd background changer boasts a number of features that will make you go: "is that it?". These features include and are limited to...</p>
       <ul>
-        <li>Automatically rendering at the resolution of your monitor (untested)</li>
+        <li>Automatically rendering at the resolution of your monitor (barely tested)</li>
         <li>Lacking almost any quality assurance</li>
         <li>Customizable colors</li>
         <li>Displaying title AND alt text!</li>
@@ -76,7 +76,7 @@
           <h3>Install as .exe</h3>
           <p>You can install the xkcd desktop background changer as an executable file. Its portable, its quick, its easy. However, it does require you to trust that I am not distributing a virus, which I am not by the way <sup>[Citation Needed]</sup>.</p>
         </div>
-        <a href="xkcd-bg.exe"><button>Download</button></a>
+        <a href="xkcd-bg.zip"><button>Download</button></a>
       </div>
       <div class="container" style="margin: 0; flex-basis: 41%;">
         <h3>Install with Python</h3>
